test/parser/prs/loop-07.hac
// "loop-07.hac"
// copy-modified from "loop-05.hac" (transposed loop/prs)
// should pass, and produce an inverter

template <pint N>
defproc null() {
bool x, y;
(;i:N:
prs {
	x	=> y-
}
)
}

null<0> none;	// no production rule
null<3> foo;	// redundant rules

